Fix Collapse state not updating after Python call

Added a proper callback signal from node_base and make
kis_image emit the correct signal if changed.

BUG:411981