libs/image/kis_image.cc
@@ -1906,8 +1906,9 @@ bool KisImage::levelOfDetailBlocked() const
     return m_d->blockLevelOfDetail;
 }
 
-void KisImage::notifyNodeCollpasedChanged()
+void KisImage::nodeCollapsedChanged(KisNode * node)
 {
+    Q_UNUSED(node);
     emit sigNodeCollapsedChanged();
 }
 
